redis-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
    name: my-redis-deployment
    labels:
        app: my-redis
        type: cache

spec:
    template:
        metadata:
            name: myapp-pod
            labels:
                  app: my-redis
                  type: cache
        spec:
            containers:
                - name: my-redis-container
                  image: redis
    replicas: 1
    selector:
        matchLabels:
            app: my-redis
            type: cache
